update: enumerated free decominoes!

--- a/decominoes.ipynb
+++ b/decominoes.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 2, 6, 19, 63, 216, 760, 2725, 9910, 36446]\n",
-      "[0, 1, 4, 14, 47, 157, 530, 1820, 6365, 22640, 81726]\n"
+      "[1, 1, 2, 6, 19, 63, 216, 760, 2725, 9910, 36446]\n"
      ]
     }
    ],
    "source": [
     "import copy\n",
+    "from functions.tools import decode_shape_binaries_str, encode_shape_binaries\n",
+    "\n",
     "def neighbors(polyomino):\n",
     "    \"\"\"\n",
     "    ARGS: polyomino: a list of tuples representing the squares of a polyomino\n",
@@ -65,31 +66,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check for duplicates in the form of rotations and reflections to get the number of free polyominoes\n",
-    "# Define a function to determine the reflections and rotations of a polyomino\n",
-    "def rotations(polyomino):\n",
-    "    rotations = []\n",
-    "    for i in range(4):\n",
-    "        rotations.append(polyomino)\n",
-    "        polyomino = [(y, -x) for (x,y) in polyomino]\n",
-    "    return rotations\n",
-    "\n",
-    "def reflections(polyomino):\n",
-    "    reflections = []\n",
-    "    reflections.append(polyomino)\n",
-    "    reflections.append([(x,-y) for (x,y) in polyomino])\n",
-    "    return reflections\n",
-    "\n",
-    "# Subtract the number of duplicates from the number of polyominoes\n",
-    "def free\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -98,9 +74,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36446\n"
+     ]
+    }
+   ],
    "source": [
     "import copy\n",
     "def neighbors(polyomino):\n",
@@ -146,17 +130,18 @@
     "            n_ominoes.append(new_polyomino)\n",
     "\n",
     "\n",
-    "decominoes = redelmeier(10)\n"
+    "decominoes = redelmeier(10)\n",
+    "print(len(decominoes))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "\n",
+    "# Converts tuple representation of polyomino to grid representation\n",
     "def tuple_polyomino_to_grid(tuple_polyomino):\n",
     "    min_x = min([x for (x,y) in tuple_polyomino])\n",
     "    min_y = min([y for (x,y) in tuple_polyomino])\n",
@@ -166,6 +151,8 @@
     "        grid[y][x] = '1'\n",
     "    return grid\n",
     "\n",
+    "\n",
+    "# Converts grid representation to string representation\n",
     "def grid_to_string(grid):\n",
     "    string = \"\"\n",
     "    for row in grid:\n",
@@ -183,33 +170,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "_ _ _ _ ■ _ _ _ _ _\n",
-      "_ _ ■ ■ ■ _ _ _ _ _\n",
-      "_ _ ■ _ _ _ _ _ _ _\n",
+      "_ ■ _ _ _ _ _ _ _ _\n",
+      "_ ■ _ _ _ _ _ _ _ _\n",
+      "_ ■ _ _ _ _ _ _ _ _\n",
+      "_ ■ _ _ _ _ _ _ _ _\n",
+      "_ ■ _ _ _ _ _ _ _ _\n",
+      "_ ■ _ _ _ _ _ _ _ _\n",
+      "_ ■ _ _ _ _ _ _ _ _\n",
       "■ ■ ■ _ _ _ _ _ _ _\n",
-      "_ _ ■ ■ _ _ _ _ _ _\n",
-      "_ _ _ _ _ _ _ _ _ _\n",
-      "_ _ _ _ _ _ _ _ _ _\n",
-      "_ _ _ _ _ _ _ _ _ _\n",
       "_ _ _ _ _ _ _ _ _ _\n",
       "_ _ _ _ _ _ _ _ _ _\n",
       "\n",
-      "[(0, 0), (0, 1), (-1, 1), (-2, 1), (-2, 2), (-2, 3), (-2, 4), (-1, 4), (-3, 3), (-4, 3)]\n"
+      "[(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (0, 6), (0, 7), (-1, 7), (1, 7)]\n"
      ]
     }
    ],
    "source": [
     "# print(tuple_polyomino_to_grid(decominoes[0]))\n",
-    "index = 23098\n",
+    "index = 20\n",
     "print(grid_to_string(tuple_polyomino_to_grid(decominoes[index])))\n",
     "print(decominoes[index])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Enumerate free decominoes!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For each decomino in decominoes, transform it into a set of its rotations and reflections\n",
+    "# If not in unique_decominoes, add it to unique_decominoes\n",
+    "\n",
+    "\n",
+    "\n",
+    "def get_rotations(decomino):\n",
+    "    rotate = lambda decomino: [(y,-x) for (x,y) in decomino]\n",
+    "    rotations = []\n",
+    "    for _ in range(4):      \n",
+    "        decomino = rotate(decomino)\n",
+    "        rotations.append(decomino)\n",
+    "    return rotations\n",
+    "\n",
+    "\n",
+    "def get_reflections(decomino):\n",
+    "    return [[(-x,y) for (x,y) in decomino], [(x,-y) for (x,y) in decomino]]\n",
+    "\n",
+    "# Takes in the fixed decominoes and returns the smaller set of free decominoes\n",
+    "def get_unique_decominoes(decominoes):\n",
+    "    unique_decominoes = set()\n",
+    "    for decomino in decominoes:\n",
+    "        transformations = [] # A list of tuple representations of the decomino's rotations and reflections\n",
+    "        for rotation in get_rotations(decomino):\n",
+    "            transformations.append(rotation)\n",
+    "            for reflection in get_reflections(rotation):\n",
+    "                transformations.append(reflection)\n",
+    "        transformations_grids = map(tuple_polyomino_to_grid, transformations)\n",
+    "        transformation_encodings_set = set(map(encode_shape_binaries, transformations_grids))\n",
+    "        if not transformation_encodings_set.intersection(unique_decominoes): # Transform every possible way and check if any of them are already in the set\n",
+    "            unique_decominoes.add(encode_shape_binaries(tuple_polyomino_to_grid(decomino)))\n",
+    "    return unique_decominoes\n",
+    "   \n",
+    "    \n",
+    "free_decominoes = get_unique_decominoes(decominoes)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "320 960 256 256 768 0 0 0 0 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(list(free_decominoes)[2])\n",
+    "        "
    ]
   }
  ],
