--- a/data_combined.ipynb
+++ b/data_combined.ipynb
@@ -70,6 +70,8 @@
     "    \"\"\"\n",
     "    codes = []\n",
     "    for row in shape:\n",
+    "        if 1 not in row:\n",
+    "            continue\n",
     "        # Convert the list of bits into a binary string\n",
     "        binary_str = ''.join([str(bit) for bit in row])\n",
     "\n",
@@ -81,7 +83,8 @@
     "    return ' '.join(codes)\n",
     "\n",
     "shape = [[1, 0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
-    "         [1, 1, 1, 1, 1, 1, 1, 1, 0, 0]]\n",
+    "         [1, 1, 1, 1, 1, 1, 1, 1, 0, 0],\n",
+    "         [0,0,0,0,0,0,0,0,0,0],]\n",
     "print(encode_shape_binaries(shape))"
    ]
   },
@@ -91,10 +94,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1, 0, 1, 0, 0, 0, 0, 0, 0, 0], [1, 1, 1, 1, 1, 1, 1, 1, 0, 0]]\n"
+     "ename": "NameError",
+     "evalue": "name 'decode_shape_binaries_str' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdecode_shape_binaries_str\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m640 1020\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'decode_shape_binaries_str' is not defined"
      ]
     }
    ],
