--- a/data_combined.ipynb
+++ b/data_combined.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "640 1020\n"
+      "1023\n"
      ]
     }
    ],
@@ -84,24 +84,22 @@
     "\n",
     "shape = [[1, 0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
     "         [1, 1, 1, 1, 1, 1, 1, 1, 0, 0],\n",
-    "         [0,0,0,0,0,0,0,0,0,0],]\n",
+    "         [0,0,0,0,0,0,0,0,0,0]]\n",
+    "\n",
+    "shape = [[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]\n",
     "print(encode_shape_binaries(shape))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'decode_shape_binaries_str' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdecode_shape_binaries_str\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m640 1020\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'decode_shape_binaries_str' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 0, 1, 0, 0, 0, 0, 0, 0, 0], [1, 1, 1, 1, 1, 1, 1, 1, 0, 0]]\n"
      ]
     }
    ],
