update: decominoes functions

--- a/data_combined.ipynb
+++ b/data_combined.ipynb
@@ -92,19 +92,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 0, 1, 0, 0, 0, 0, 0, 0, 0], [1, 1, 1, 1, 1, 1, 1, 1, 0, 0]]\n"
+      "[[0, 0, 0, 0, 0, 0, 0, 1, 1, 0], [1, 1, 1, 1, 1, 1, 1, 0, 1, 0]]\n",
+      "[[0, 0, 0, 0, 0, 0, 1, 1, 1, 0], [1, 1, 1, 1, 1, 1, 0, 0, 0, 1]]\n",
+      "[[0, 0, 0, 0, 1, 1, 1, 1, 1, 0], [1, 1, 1, 1, 0, 0, 0, 0, 0, 1]]\n"
      ]
     }
    ],
    "source": [
-    "print(decode_shape_binaries_str(\"640 1020\"))"
+    "# print(decode_shape_binaries_str(\"640 1020\"))\n",
+    "print(decode_shape_binaries_str(\"6 1018\"))\n",
+    "print(decode_shape_binaries_str(\"14 1009\"))\n",
+    "print(decode_shape_binaries_str(\"62 961\"))"
    ]
   },
   {
@@ -365,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -510,6 +515,282 @@
     "\n",
     "# Save the processed data\n",
     "df.to_csv(\"data/all-games.tsv\", index=False, sep=\"\\t\", quoting=2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               game_file  participant_ID\n",
+      "0    20120513_091629.txt               1\n",
+      "1    20120513_091629.txt               1\n",
+      "2    20120513_091629.txt               1\n",
+      "3    20120513_091629.txt               1\n",
+      "4    20120513_091629.txt               1\n",
+      "..                   ...             ...\n",
+      "365  20120611_131956.txt             100\n",
+      "366  20120611_131956.txt             100\n",
+      "367  20120611_131956.txt             100\n",
+      "368  20120611_131956.txt             100\n",
+      "369  20120611_131956.txt             100\n",
+      "\n",
+      "[32319 rows x 2 columns]\n",
+      "<bound method NDFrame.head of                    shape  timestamp   timestamp_gallery           next_shape  \\\n",
+      "0                   1023     16.038                                     1023   \n",
+      "1                   1023     17.168  29.650000000000002               2 1022   \n",
+      "2                 2 1022     76.165                               4 1020 512   \n",
+      "3             4 1020 512     79.600                               4 1020 256   \n",
+      "4             4 1020 256     81.315                             520 1016 512   \n",
+      "..                   ...        ...                 ...                  ...   \n",
+      "365  896 320 448 256 256    953.421                      960 128 224 128 128   \n",
+      "366  960 128 224 128 128    954.556                      960 640 192 128 128   \n",
+      "367  960 640 192 128 128    955.716                      960 640 640 128 128   \n",
+      "368  960 640 640 128 128    956.739                      896 640 896 128 128   \n",
+      "369  896 640 896 128 128    957.848                                     None   \n",
+      "\n",
+      "               game_file                                       shape_matrix  \\\n",
+      "0    20120513_091629.txt                   [[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]   \n",
+      "1    20120513_091629.txt                   [[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]   \n",
+      "2    20120513_091629.txt  [[0, 0, 0, 0, 0, 0, 0, 0, 1, 0], [1, 1, 1, 1, ...   \n",
+      "3    20120513_091629.txt  [[0, 0, 0, 0, 0, 0, 0, 1, 0, 0], [1, 1, 1, 1, ...   \n",
+      "4    20120513_091629.txt  [[0, 0, 0, 0, 0, 0, 0, 1, 0, 0], [1, 1, 1, 1, ...   \n",
+      "..                   ...                                                ...   \n",
+      "365  20120611_131956.txt  [[1, 1, 1, 0, 0, 0, 0, 0, 0, 0], [0, 1, 0, 1, ...   \n",
+      "366  20120611_131956.txt  [[1, 1, 1, 1, 0, 0, 0, 0, 0, 0], [0, 0, 1, 0, ...   \n",
+      "367  20120611_131956.txt  [[1, 1, 1, 1, 0, 0, 0, 0, 0, 0], [1, 0, 1, 0, ...   \n",
+      "368  20120611_131956.txt  [[1, 1, 1, 1, 0, 0, 0, 0, 0, 0], [1, 0, 1, 0, ...   \n",
+      "369  20120611_131956.txt  [[1, 1, 1, 0, 0, 0, 0, 0, 0, 0], [1, 0, 1, 0, ...   \n",
+      "\n",
+      "                                      shape_matrix_str  shape_ID  \\\n",
+      "0                                           1111111111       227   \n",
+      "1                                           1111111111       227   \n",
+      "2                               0000000010\\n1111111110      2103   \n",
+      "3                   0000000100\\n1111111100\\n1000000000      4960   \n",
+      "4                   0000000100\\n1111111100\\n0100000000      4957   \n",
+      "..                                                 ...       ...   \n",
+      "365  1110000000\\n0101000000\\n0111000000\\n0100000000...      9316   \n",
+      "366  1111000000\\n0010000000\\n0011100000\\n0010000000...      9991   \n",
+      "367  1111000000\\n1010000000\\n0011000000\\n0010000000...     10335   \n",
+      "368  1111000000\\n1010000000\\n1010000000\\n0010000000...     10344   \n",
+      "369  1110000000\\n1010000000\\n1110000000\\n0010000000...      9570   \n",
+      "\n",
+      "     participant_id  participant_ID  \n",
+      "0                 1               1  \n",
+      "1                 1               1  \n",
+      "2                 1               1  \n",
+      "3                 1               1  \n",
+      "4                 1               1  \n",
+      "..              ...             ...  \n",
+      "365             100             100  \n",
+      "366             100             100  \n",
+      "367             100             100  \n",
+      "368             100             100  \n",
+      "369             100             100  \n",
+      "\n",
+      "[32319 rows x 10 columns]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Modify human data: add an ID column that identifies each shape, remove gallery column\n",
+    "# Give OpenAI model a single participant's game data (without the gallery information) and ask it to pick its favorite shapes\n",
+    "for game in df:\n",
+    "    df['shape_ID'] = df['shape'].astype('category').cat.codes + 1\n",
+    "\n",
+    "unique_filenames = df['game_file'].unique()\n",
+    "filename_to_id = {filename: i+1 for i, filename in enumerate(unique_filenames)}\n",
+    "\n",
+    "# Create the new column using the mapping\n",
+    "df['participant_ID'] = df['game_file'].map(filename_to_id)\n",
+    "\n",
+    "# Display the result\n",
+    "print(df[['game_file', 'participant_ID']])\n",
+    "print(df.head)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       participant_ID  shape_ID                shape            game_file  \\\n",
+      "0                  14      7418    64 64 960 576 576  20110530_180623.txt   \n",
+      "1                  14      5188      448 768 256 480  20110530_180623.txt   \n",
+      "2                  14      7964             768 1020  20110530_180623.txt   \n",
+      "3                  14      4491      384 224 896 640  20110530_180623.txt   \n",
+      "4                  14      6176  512 768 384 960 256  20110530_180623.txt   \n",
+      "...               ...       ...                  ...                  ...   \n",
+      "26875              16      3840          288 992 896  20120613_122200.txt   \n",
+      "26876              16      4182         320 1008 160  20120613_122200.txt   \n",
+      "26877              16      5521          480 960 320  20120613_122200.txt   \n",
+      "26878              16     10026          960 192 240  20120613_122200.txt   \n",
+      "26879              16      4296      320 960 896 256  20120613_122200.txt   \n",
+      "\n",
+      "                                            shape_matrix  \n",
+      "0      [[0, 0, 0, 1, 0, 0, 0, 0, 0, 0], [0, 0, 0, 1, ...  \n",
+      "1      [[0, 1, 1, 1, 0, 0, 0, 0, 0, 0], [1, 1, 0, 0, ...  \n",
+      "2      [[1, 1, 0, 0, 0, 0, 0, 0, 0, 0], [1, 1, 1, 1, ...  \n",
+      "3      [[0, 1, 1, 0, 0, 0, 0, 0, 0, 0], [0, 0, 1, 1, ...  \n",
+      "4      [[1, 0, 0, 0, 0, 0, 0, 0, 0, 0], [1, 1, 0, 0, ...  \n",
+      "...                                                  ...  \n",
+      "26875  [[0, 1, 0, 0, 1, 0, 0, 0, 0, 0], [1, 1, 1, 1, ...  \n",
+      "26876  [[0, 1, 0, 1, 0, 0, 0, 0, 0, 0], [1, 1, 1, 1, ...  \n",
+      "26877  [[0, 1, 1, 1, 1, 0, 0, 0, 0, 0], [1, 1, 1, 1, ...  \n",
+      "26878  [[1, 1, 1, 1, 0, 0, 0, 0, 0, 0], [0, 0, 1, 1, ...  \n",
+      "26879  [[0, 1, 0, 1, 0, 0, 0, 0, 0, 0], [1, 1, 1, 1, ...  \n",
+      "\n",
+      "[26880 rows x 5 columns]\n",
+      "Saved file: human_participants_blinded/data_human_1.csv\n",
+      "Saved file: human_participants_blinded/data_human_2.csv\n",
+      "Saved file: human_participants_blinded/data_human_3.csv\n",
+      "Saved file: human_participants_blinded/data_human_4.csv\n",
+      "Saved file: human_participants_blinded/data_human_5.csv\n",
+      "Saved file: human_participants_blinded/data_human_6.csv\n",
+      "Saved file: human_participants_blinded/data_human_7.csv\n",
+      "Saved file: human_participants_blinded/data_human_8.csv\n",
+      "Saved file: human_participants_blinded/data_human_9.csv\n",
+      "Saved file: human_participants_blinded/data_human_10.csv\n",
+      "Saved file: human_participants_blinded/data_human_11.csv\n",
+      "Saved file: human_participants_blinded/data_human_12.csv\n",
+      "Saved file: human_participants_blinded/data_human_13.csv\n",
+      "Saved file: human_participants_blinded/data_human_14.csv\n",
+      "Saved file: human_participants_blinded/data_human_15.csv\n",
+      "Saved file: human_participants_blinded/data_human_16.csv\n",
+      "Saved file: human_participants_blinded/data_human_17.csv\n",
+      "Saved file: human_participants_blinded/data_human_18.csv\n",
+      "Saved file: human_participants_blinded/data_human_19.csv\n",
+      "Saved file: human_participants_blinded/data_human_20.csv\n",
+      "Saved file: human_participants_blinded/data_human_21.csv\n",
+      "Saved file: human_participants_blinded/data_human_22.csv\n",
+      "Saved file: human_participants_blinded/data_human_23.csv\n",
+      "Saved file: human_participants_blinded/data_human_24.csv\n",
+      "Saved file: human_participants_blinded/data_human_25.csv\n",
+      "Saved file: human_participants_blinded/data_human_26.csv\n",
+      "Saved file: human_participants_blinded/data_human_27.csv\n",
+      "Saved file: human_participants_blinded/data_human_28.csv\n",
+      "Saved file: human_participants_blinded/data_human_29.csv\n",
+      "Saved file: human_participants_blinded/data_human_30.csv\n",
+      "Saved file: human_participants_blinded/data_human_31.csv\n",
+      "Saved file: human_participants_blinded/data_human_32.csv\n",
+      "Saved file: human_participants_blinded/data_human_33.csv\n",
+      "Saved file: human_participants_blinded/data_human_34.csv\n",
+      "Saved file: human_participants_blinded/data_human_35.csv\n",
+      "Saved file: human_participants_blinded/data_human_36.csv\n",
+      "Saved file: human_participants_blinded/data_human_37.csv\n",
+      "Saved file: human_participants_blinded/data_human_38.csv\n",
+      "Saved file: human_participants_blinded/data_human_39.csv\n",
+      "Saved file: human_participants_blinded/data_human_40.csv\n",
+      "Saved file: human_participants_blinded/data_human_41.csv\n",
+      "Saved file: human_participants_blinded/data_human_42.csv\n",
+      "Saved file: human_participants_blinded/data_human_43.csv\n",
+      "Saved file: human_participants_blinded/data_human_44.csv\n",
+      "Saved file: human_participants_blinded/data_human_45.csv\n",
+      "Saved file: human_participants_blinded/data_human_46.csv\n",
+      "Saved file: human_participants_blinded/data_human_47.csv\n",
+      "Saved file: human_participants_blinded/data_human_48.csv\n",
+      "Saved file: human_participants_blinded/data_human_49.csv\n",
+      "Saved file: human_participants_blinded/data_human_50.csv\n",
+      "Saved file: human_participants_blinded/data_human_51.csv\n",
+      "Saved file: human_participants_blinded/data_human_52.csv\n",
+      "Saved file: human_participants_blinded/data_human_53.csv\n",
+      "Saved file: human_participants_blinded/data_human_54.csv\n",
+      "Saved file: human_participants_blinded/data_human_55.csv\n",
+      "Saved file: human_participants_blinded/data_human_56.csv\n",
+      "Saved file: human_participants_blinded/data_human_57.csv\n",
+      "Saved file: human_participants_blinded/data_human_58.csv\n",
+      "Saved file: human_participants_blinded/data_human_59.csv\n",
+      "Saved file: human_participants_blinded/data_human_60.csv\n",
+      "Saved file: human_participants_blinded/data_human_61.csv\n",
+      "Saved file: human_participants_blinded/data_human_62.csv\n",
+      "Saved file: human_participants_blinded/data_human_63.csv\n",
+      "Saved file: human_participants_blinded/data_human_64.csv\n",
+      "Saved file: human_participants_blinded/data_human_65.csv\n",
+      "Saved file: human_participants_blinded/data_human_66.csv\n",
+      "Saved file: human_participants_blinded/data_human_67.csv\n",
+      "Saved file: human_participants_blinded/data_human_68.csv\n",
+      "Saved file: human_participants_blinded/data_human_69.csv\n",
+      "Saved file: human_participants_blinded/data_human_70.csv\n",
+      "Saved file: human_participants_blinded/data_human_71.csv\n",
+      "Saved file: human_participants_blinded/data_human_72.csv\n",
+      "Saved file: human_participants_blinded/data_human_73.csv\n",
+      "Saved file: human_participants_blinded/data_human_74.csv\n",
+      "Saved file: human_participants_blinded/data_human_75.csv\n",
+      "Saved file: human_participants_blinded/data_human_76.csv\n",
+      "Saved file: human_participants_blinded/data_human_77.csv\n",
+      "Saved file: human_participants_blinded/data_human_78.csv\n",
+      "Saved file: human_participants_blinded/data_human_79.csv\n",
+      "Saved file: human_participants_blinded/data_human_80.csv\n",
+      "Saved file: human_participants_blinded/data_human_81.csv\n",
+      "Saved file: human_participants_blinded/data_human_82.csv\n",
+      "Saved file: human_participants_blinded/data_human_83.csv\n",
+      "Saved file: human_participants_blinded/data_human_84.csv\n",
+      "Saved file: human_participants_blinded/data_human_85.csv\n",
+      "Saved file: human_participants_blinded/data_human_86.csv\n",
+      "Saved file: human_participants_blinded/data_human_87.csv\n",
+      "Saved file: human_participants_blinded/data_human_88.csv\n",
+      "Saved file: human_participants_blinded/data_human_89.csv\n",
+      "Saved file: human_participants_blinded/data_human_90.csv\n",
+      "Saved file: human_participants_blinded/data_human_91.csv\n",
+      "Saved file: human_participants_blinded/data_human_92.csv\n",
+      "Saved file: human_participants_blinded/data_human_93.csv\n",
+      "Saved file: human_participants_blinded/data_human_94.csv\n",
+      "Saved file: human_participants_blinded/data_human_95.csv\n",
+      "Saved file: human_participants_blinded/data_human_96.csv\n",
+      "Saved file: human_participants_blinded/data_human_97.csv\n",
+      "Saved file: human_participants_blinded/data_human_98.csv\n",
+      "Saved file: human_participants_blinded/data_human_99.csv\n",
+      "Saved file: human_participants_blinded/data_human_100.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/lz/6c9r7h8n39zgx1pvrzsj13900000gn/T/ipykernel_48087/544626661.py:10: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  randomized_order_df = unique_shapes_df.groupby('game_file').apply(\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# print(df.head)\n",
+    "\n",
+    "LLM_evaluation_df = df.copy()\n",
+    "\n",
+    "LLM_evaluation_df = LLM_evaluation_df[['participant_ID', 'shape_ID', 'shape', 'game_file', 'shape_matrix']]\n",
+    "\n",
+    "unique_shapes_df = LLM_evaluation_df.drop_duplicates(subset=['game_file', 'shape'])\n",
+    "# print(unique_shapes_df.head)\n",
+    "\n",
+    "randomized_order_df = unique_shapes_df.groupby('game_file').apply(\n",
+    "    lambda x: x.sample(frac=1, random_state=42)\n",
+    ").reset_index(drop=True)\n",
+    "print(randomized_order_df)\n",
+    "\n",
+    "# Group the data by the ID column\n",
+    "grouped = randomized_order_df.groupby('participant_ID')  # Replace 'id' with your actual ID column name\n",
+    "\n",
+    "# Save each group to a separate CSV file\n",
+    "output_dir = \"human_participants_blinded\"\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
+    "\n",
+    "for participant_ID, group in grouped:\n",
+    "    # Creating a filename based on the ID\n",
+    "    filename = os.path.join(output_dir, f'data_human_{participant_ID}.csv')\n",
+    "    \n",
+    "    # Save the group to a CSV file\n",
+    "    group.to_csv(filename, index=False)\n",
+    "    \n",
+    "    print(f'Saved file: {filename}')"
    ]
   }
  ],
