--- a/shapes.ipynb
+++ b/shapes.ipynb
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,9 @@
     }
    ],
    "source": [
-    "df.groupby(\"game_file\").size().sort_values(ascending=False).hist()"
+    "df.groupby(\"game_file\").size().sort_values(ascending=False).hist()\n",
+    "\n",
+    "df.groupby(\"game_file\")"
    ]
   },
   {
