--- a/preference_alignment.ipynb
+++ b/preference_alignment.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -143,8 +139,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "benchmarking-creativity-nbm55LEq-py3.12",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
